# RedShift

./: .gitignore  Cargo.toml  README.md  app.manifest  build.rs  icon.rc
config/: config.json
src/: main.rs  overlay.rs
