[package]
name = "RedShift"
version = "1.0.0"
edition = "2021"

# Add this line to specify the Windows subsystem
[package.metadata.windows]
subsystem = "windows"

# Alternative method - add this if the above doesn't work
[[bin]]
name = "RedShift"
path = "src/main.rs"
subsystem = "windows"

[dependencies]
# GUI Framework
eframe = { version = "0.22.0", default-features = false, features = ["glow"] }
egui = "0.22.0"

# Window Management
winit = "0.28.0"

# Graphics
pixels = "0.13.0"
wgpu = "=0.17.0"
wgpu-hal = "=0.17.0"

# System Tray
systray = "0.4.0"

# Windows API
winapi = { version = "0.3.9", features = ["winbase", "winuser", "windef", "shellapi"] }
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

# Raw Window Handle
raw-window-handle = "0.5"

# Utility
once_cell = "1.17.0"
image = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.2"

# Registry
winreg = "0.50"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
windows-subsystem = "windows"

